--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CMSC 643 Spring 2018</title>
+    <title>CMSC 456/656 Spring 2018</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,20 +28,28 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Shantanu Sengupta</a>
+        <div style="background-color:rgba(0, 0, 0, 0.8); padding: 10px 10px 10px 10px">
+          <a class="navbar-brand js-scroll-trigger" href="#page-top">Shantanu Sengupta</a>
+        </div>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">Homework Solutions</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">TA Details</a>
-            </li>
-          </ul>
+          
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <div style="background-color:rgba(0, 0, 0, 0.8); padding: 10px 10px 10px 10px">
+                <a class="nav-link js-scroll-trigger" href="#about">Homework Solutions</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <div style="background-color:rgba(0, 0, 0, 0.8); padding: 10px 10px 10px 10px">
+                  <a class="nav-link js-scroll-trigger" href="#download">TA Details</a>
+                  </div>
+              </li>
+            </ul>
+          
         </div>
       </div>
     </nav>
@@ -52,9 +60,9 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <div style="background-color:rgba(0, 0, 0, 0.7); padding: 10px 10px 10px 10px">
-                <h1>CMSC 643</h1>
-                <h1>Quantum Computation</h1>
+              <div style="background-color:rgba(0, 0, 0, 0.8); padding: 10px 10px 10px 10px">
+                <h1>CMSC 456/656</h1>
+                <h1>Symbolic and Algebraic Processing</h1>
               </div>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
@@ -75,18 +83,6 @@
               <li>
                 Homework 1
               </li>
-              <li>
-                Homework 2
-              </li>
-              <li>
-                Homework 3
-              </li>
-              <li>
-                Homework 4
-              </li>
-              <li>
-                Homework 5
-              </li>
             </ul>
           </div>
         </div>
@@ -97,7 +93,7 @@
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <div style="background-color:rgba(0, 0, 0, 0.7); padding: 10px 10px 10px 10px">
+          <div style="background-color:rgba(0, 0, 0, 0.8); padding: 10px 10px 10px 10px;">
             <h2>TA Details</h2>
             <p>Name : Shantanu Sengupta</p>
             <p>Office Hours : Wednesday 12PM-12:30PM</p>
@@ -111,7 +107,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>CMSC 643 Spring 2018</p>
+        <p>CMSC 456/656 Spring 2018</p>
       </div>
     </footer>
 
