--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
             <h2>Homework Solutions</h2>
             <ul>
               <li>
-                Homework 1
+                <a href="data/hw1.pdf" download>Homework 1</a>
+              </li>
+              <li>
+                <a href="data/hw2.pdf" download>Homework 2 - Q1,Q3</a>
+              </li>
+              <li>
+                <a href="data/hw2graphs.pdf" download>Homework 2 - Q2,Q4,Q5</a>
               </li>
             </ul>
           </div>
